# remote_debugger

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  Makefile.in  NOTICE  README.md  config.h.in  configure  configure.ac  cov_build.sh  file.md  remote_debugger.json  remote_debugger_rdkb.json  remote_debugger_rdkv.json  run_l2.sh  run_ut.sh
.github/agents/: embedded-programmer.agent.md  l2-test-runner.agent.md  legacy-refactor-specialist.agent.md
.github/docs/: IssueType_Suffix_HLD.md  RRD_Profile_Data_retrieval_HLD.md  rrd_uuid_support_implementation_HLD.md  uploadRRDLogs_Requirements.md
.github/instructions/: build-system.instructions.md  c-embedded.instructions.md  cpp-testing.instructions.md
.github/skills/bdd-feature-generator/: SKILL.md
.github/skills/platform-portability-checker/: SKILL.md
.github/skills/quality-checker/: README.md  SKILL.md
.github/skills/triage-logs/: SKILL.md
.github/workflows/: L1-Test.yml  L2-tests.yml  code-coverage.yml  native_full_build.yml
autom4te.cache/: output.2  output.3  requests  traces.0  traces.2  traces.3
docs/: rrd_uuid_support_implementation_HLD.md  uploadRRDLogs_Flowcharts.md  uploadRRDLogs_HLD.md  uploadRRDLogs_LLD.md  uploadRRDLogs_SequenceDiagrams.md
dummy_140131875528832_2026-05-05-16-41-51/: debug_outputs.txt
scripts/: remote-debugger.path  remote-debugger.service  remote_debugger.sh  systemd-run  uploadRDKBRRDLogs.sh  uploadRRDLogs.sh
src/: Makefile.am  Makefile.in  pwrMgr.h  rdmMgr.h  rdmdownload.c  rrdCommandSanity.c  rrdCommandSanity.h  rrdCommon.h  rrdDeepSleep.c  rrdDeepSleep.h  rrdDynamic.c  rrdDynamic.h  rrdEventProcess.c  rrdEventProcess.h  rrdExecuteScript.c  rrdExecuteScript.h  rrdIarm.c  rrdIarm.h  rrdIarmEvents.c  rrdInterface.c  rrdInterface.h  rrdJsonParser.c  rrdJsonParser.h  rrdMain.c  rrdMain.h  rrdMsgPackDecoder.c  rrdMsgPackDecoder.h  rrdOpenTelemetry.c  rrdOpenTelemetry.h  rrdOpenTelemetry_cpp_wrapper.cpp  rrdOpenTelemetry_cpp_wrapper.h  rrdRbus.h  rrdRunCmdThread.c  rrdRunCmdThread.h  rrdTraceTestApp.c  rrd_archive.c  rrd_archive.h  rrd_config.c  rrd_config.h  rrd_log.h  (+7 more)
src/unittest/: Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  mockSampleUploadScript.sh  remotedebugger_gtest-rrdUnitTestRunner.gcno  rrdUnitTestRunner.cpp  test_rrd_logproc.cpp  test_rrd_sysinfo.c  test_rrd_sysinfo.cpp  test_rrd_upload_orchestrate.cpp  test_uploadRRDLogs.cpp
src/unittest/UTJson/: invalidJson.json  profileTestInvalid.json  profileTestValid.json  validJson2.json
src/unittest/autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
src/unittest/mocks/: Client_Mock.cpp  Client_Mock.h  pwrMgr.h  secure_wrapper.h
test/functional-tests/docs/: L1_Test_Coverage.md  L2_Test_Coverage.md
test/functional-tests/features/: rrd_append_dynamic_profile_static_not_found.feature  rrd_append_report.feature  rrd_background_cmd_static_profile_report.feature  rrd_c_api_upload.feature  rrd_corrupted_static_profile_report.feature  rrd_debug_report_upload.feature  rrd_deepsleep_dynamic.feature  rrd_deepsleep_static.feature  rrd_dynamic_profile_missing_report.feature  rrd_dynamic_profile_node_length_exceeded.feature  rrd_dynamic_profile_report.feature  rrd_dynamic_with_download_harmful_report.feature  rrd_empty_issuetype_event.feature  rrd_harmful_command_static_report.feature  rrd_single_instance.feature  rrd_start_control.feature  rrd_start_subscribe_and_wait.feature  rrd_static_profile_category_report.feature  rrd_static_profile_missing_command_report.feature  rrd_static_profile_report.feature  rrd_static_profile_report_with_suffix.feature  test_rrd_dynamic_profile_harmful_report.feature  test_rrd_static_profile_report_with_suffix.feature  test_rrd_static_profile_report_with_suffix_negative_case.feature
test/functional-tests/tests/: Makefile  create_json.sh  deepsleep_main.c  helper_functions.py  power_controller.h  rrd_deepsleep_static.feature  test.py  test_append.py  test_category.py  test_deepsleep_dynamic.py  test_deepsleep_static.py  test_pwr_event_handler.c  test_rrd_append_dynamic_profile_report.py  test_rrd_append_dynamic_profile_static_notfound.py  test_rrd_background_cmd_static_profile_report.py  test_rrd_c_api_upload.py  test_rrd_corrupted_static_profile_report.py  test_rrd_debug_report_upload.py  test_rrd_deepsleep_dynamic_report.py  test_rrd_deepsleep_static_report.py  test_rrd_dynamic_category_report.py  test_rrd_dynamic_missing_report.py  test_rrd_dynamic_profile_harmful_report.py  test_rrd_dynamic_profile_missing_report.py  test_rrd_dynamic_profile_rdm_node_length_exceeded.py  test_rrd_dynamic_profile_report.py  test_rrd_dynamic_subcategory_report.py  test_rrd_dynamic_with_download_harmful.py  test_rrd_empty_issuetype_event.py  test_rrd_harmful_command_static_report.py  test_rrd_negative.py  test_rrd_single_instance.py  test_rrd_start_control.py  test_rrd_start_subscribe_and_wait.py  test_rrd_static_profile_category_report.py  test_rrd_static_profile_missing_command_report.py  test_rrd_static_profile_report.py  test_rrd_static_profile_report_with_suffix.py  test_rrd_static_profile_report_with_suffix_negative_case.py  uploadSTBLogs.sh
